# cubic-phase-fitter

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
cubic_phase_fitter/: __init__.py  fitter.py  main.py  molecule_curvature.py  point_generation.py  surface_generation.py  translations.py  write_frame.py
cubic_phase_fitter/curvature/: __init__.py  curvature.py  curvature_function.py  derivative.py
cubic_phase_fitter/curvature/terms/: __init__.py  term1.py  term2.py  term3.py  term4.py  term5.py  term6.py
cubic_phase_fitter/fitfunc/: __init__.py  fitfunc.py  permutations.py
