
[project]
name='LipidCubicPhases'
version='0.0.1-alpha'
dependencies = [
    "pbr",
    "vermouth>=0.9.6",
    "numpy>=1.26.4",
    "MDAnalysis @ git+https://github.com/MDAnalysis/mdanalysis.git@develop#subdirectory=package",
    "tqdm",
    "scipy",
    "scikit-image",
    "lmfit",
    "open3d"
    ]
keywords = ["molecular dynamics", "martini"]
authors = [{name = "Christopher Brasnett", email="c.s.brasnett@rug.nl"}]
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "Apache 2.0"}
requires-python = ">=3.8"

[build-system]
requires = [
        "wheel",
        "setuptools",
        "pbr",
    ]

[project.scripts]
cubicphasefitter = 'cubic_phase_fitter:main.cubic_phase_fitter'
cubicsurfacegen = 'cubic_phase_fitter:surface_generation.main'