[wheel]
universal = 1

[metadata]
name = cubic-phase-fitter
author = Christopher Brasnett
author_email = c.s.brasnett@rug.nl
description_file = README.md
description-content-type = text/markdown; charset=UTF-8
license = Apache 2.0
keywords = molecular dynamics martini

[options]
packages = find:
setup-requires =
    setuptools
    pbr
install-requires =  # ?? requires-dist?
    pbr
    numpy >= 1.26.4
    MDAnalysis
    numpy
    tqdm
    scipy
    scikit-image
    lmfit
zip-safe = False
